tests/empty.json.err
Parse error at line 001

001: 
     ^
Unexpected end
